# 4th-Year-Project

./: .gitignore  LICENSE  README.md  Topology_Presets.py  Tune.py  game_gym.ipynb  heuristic notebook.ipynb  memoryPuzzleGame.py  model-testing.ipynb  model-training.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  results_notebook.ipynb  setup.cfg  sw_test.py  testing deep learning.ipynb  tox.ini  train.py  tune.py
4th Year Project/: OpenAI Gym Test.ipynb
4th Year Project/.ipynb_checkpoints/: OpenAI Gym Test-checkpoint.ipynb
figures/: avg route length rolling.pgf  bp rolling.pgf  bp_contiguous vs traffic load.pgf  bp_continuous vs traffic load.pgf  bp_no_reason vs traffic load.pgf  bp_vs_traffic_load.pgf  bp_vs_traffic_load_comparison.pgf  bp_vs_traffic_load_comparison_2_3.pgf  contiguous_vs_traffic_load_comparison.pgf  continuous_vs_traffic_load_comparison.pgf  episode time.pgf  length_vs_bp.pgf  length_vs_traffic_load.pgf  mean reward.pgf  no_reason_vs_traffic_load_comparison.pgf  noramlised contiguous_vs_traffic_load_comparison.pgf  noramlised continuous_vs_traffic_load_comparison.pgf  route_length_vs_traffic_load_comparison.pgf  route_length_vs_traffic_load_comparison_2_3.pgf
gameDemo/: link.py  main.py  node.py  requests.py  user.py
pygameTesting/: animationTest.py  memoryPuzzleGame.py  physicsModel.py  testingShapes.py
tensorboard_logs/: monitor.csv
tests/: conftest.py  test_exapmple.py  test_link.py  test_node.py  test_request_section.py  test_requests.py  test_spectrum_section.py  test_topology_section.py  test_user.py
(+83 files in other folders)
