[metadata]
name = optical_network_game
description = optical network game for research on EONs
author = Tobias Katerbau
license = MIT
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages =
    optical_network_game
install_requires =
    pygame>=2
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
optical_network_game = py.typed

[flake8]
max-line-length = 160